--- a/zanaveska.html
+++ b/zanaveska.html
@@ -19,9 +19,9 @@
       <div class="product-image">
           <img class="zzz" id="tr" src="img2\загрузка (1).jpeg" alt="Product Image" style="height: 450px;">
       </div>
-      <div class="product-description" class="zzz">
+      <div class="product-description">
           <h2>Букет Счастливое лето</h2>
-          <p>Описание товара:</p>
+          <p></p>
           <p>Цена: 5000 рублей</p>
           <button class="add-to-cart">Добавить в корзину</button>
           <button class="add-to-fav">Добавить в Избранное</button>
